grid gap IE 11 and MS Edge bug fixes on column containers

--- a/src/blocks/block-column-container/styles/style.scss
+++ b/src/blocks/block-column-container/styles/style.scss
@@ -172,45 +172,60 @@ div[data-type="c9-blocks/c9-column"],
 	grid-gap: 0 100px;
 }
 
-@supports (-ms-ime-align:auto) {
+@media all and (-ms-high-contrast: none),
+(-ms-high-contrast: active) {
+
+	.c9-block-layout-column-gap-1 .c9-block-layout-column:last-child,
+	.c9-block-layout-column-gap-2 .c9-block-layout-column:last-child,
+	.c9-block-layout-column-gap-3 .c9-block-layout-column:last-child,
+	.c9-block-layout-column-gap-4 .c9-block-layout-column:last-child,
+	.c9-block-layout-column-gap-5 .c9-block-layout-column:last-child,
+	.c9-block-layout-column-gap-6 .c9-block-layout-column:last-child,
+	.c9-block-layout-column-gap-7 .c9-block-layout-column:last-child,
+	.c9-block-layout-column-gap-8 .c9-block-layout-column:last-child,
+	.c9-block-layout-column-gap-9 .c9-block-layout-column:last-child,
+	.c9-block-layout-column-gap-10 .c9-block-layout-column:last-child {
+		margin-right: 0px;
+	}
+
 	.c9-block-layout-column-gap-1 .c9-block-layout-column {
-		margin: 0px 5px;
+		margin-right: 5px;
 	}
 
 	.c9-block-layout-column-gap-2 .c9-block-layout-column {
-		margin: 0px 10px;
+		margin-right: 10px;
 	}
 
 	.c9-block-layout-column-gap-3 .c9-block-layout-column {
-		margin: 0px 15px;
+		margin-right: 15px;
 	}
 
 	.c9-block-layout-column-gap-4 .c9-block-layout-column {
-		margin: 0px 20px;
+		margin-right: 20px;
 	}
 
 	.c9-block-layout-column-gap-5 .c9-block-layout-column {
-		margin: 0px 25px;
+		margin-right: 25px;
 	}
 
 	.c9-block-layout-column-gap-6 .c9-block-layout-column {
-		margin: 0px 30px;
+		margin-right: 30px;
 	}
 
 	.c9-block-layout-column-gap-7 .c9-block-layout-column {
-		margin: 0px 35px;
+		margin-right: 35px;
 	}
 
 	.c9-block-layout-column-gap-8 .c9-block-layout-column {
-		margin: 0px 40px;
+		margin-right: 40px;
 	}
 
 	.c9-block-layout-column-gap-9 .c9-block-layout-column {
-		margin: 0px 45px;
+		margin-right: 45px;
 	}
 
 	.c9-block-layout-column-gap-10 .c9-block-layout-column {
-		margin: 0px 50px;
+		margin-right: 50px;
 	}
 }
 
